# test1

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
wbnotifierbot/: .env.example  __main__.py  config.py  db.py  db.sql  templates.py
wbnotifierbot/handlers/: __init__.py  help.py  response.py  start.py
wbnotifierbot/services/: check_user_is_admin.py  wildberries.py
wbnotifierbot/templates/: alert_for_admin.j2  help.j2  result_checking.j2  start.j2  start_4_admin.j2
